# cppjson

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-single-platform.yml
src/: CMakeLists.txt  json.cpp  json.h  main.cpp
test/: CMakeLists.txt  testJsonClass.cpp
